Fix scrollbar bug in firefox

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -8,6 +8,7 @@
 
 html {
   height: 100%;
+  overflow-y: scroll;
 }
 
 body {
